Adding Store and cart functionalty

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,16 @@ $(document).ready(function() {
 
 {% include "includes/navbar.html" %}
 
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-warning mt-3">
+  		{{ message|safe }}
+	</div>
+
+  {% endfor %}
+{% endif %}
 {% block content %}
+
 
 {% endblock %}
 
