--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -152,8 +152,11 @@
 					<div class="price-wrap mt-2">
 						<span class="price">Rs. {{ product.price }}</span>
 					</div> <!-- price-wrap.// -->
-				</div>
-				<a href="{{ product.get_absolute_url }}" class="btn btn-block btn-primary">View Details </a>
+				</div> <!-- fix-height.// -->
+				<div class="btn-group" role="group" aria-label="Basic example">
+				<a href="{% url 'add_to_cart' product.id %}" class="btn btn-outline-success "><i class="fas fa-plus"></i> <i class="fas fa-shopping-cart"></i></a>
+				<a href="{{ product.get_absolute_url }}" class="btn btn-outline-success">View Details </a>
+				
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
