--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -33,15 +33,20 @@
 <tr>
 	<td>
 		<figure class="itemside align-items-center">
-			<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
+			<div class="aside"><img src="{{ cart_item.product.images.first.image.url }}" class="img-sm"></div>
 			<figcaption class="info">
-				<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
+
+				<a href="{{ cart_item.product.get_absolute_url }}" class=" text-truncate text-dark font-italic" style="max-width: 150px;">{{ cart_item.product.title }}</a>
 				<p class="text-muted small">
-					{% if cart_item.variations.all %}
-						{% for item in cart_item.variations.all %}
-							{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
-						{% endfor %}
-					{% endif %}
+					{% for variant in cart_item.variations.all %}
+						{% if variant.variation_type == 'color' %}
+							{{ variant.variation_type | capfirst }} : {{ variant.color.name | capfirst }}  <br>
+						{% elif variant.variation_type == 'size' %}
+							{{ variant.variation_type | capfirst }} : {{ variant.size.name | capfirst }}  <br>
+						{% elif variant.variation_type == 'flavor' %}
+						{{ variant.variation_type | capfirst }} : {{ variant.flavor.description | capfirst }} <br>
+						{% endif %}
+					{% endfor %}	
 				</p>
 			</figcaption>
 		</figure>
@@ -51,16 +56,16 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<a href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+							<a href="{% url 'less_to_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
 							</div>
 							<input type="text" class="form-control"  value="{{ cart_item.quantity }}">
 							<div class="input-group-append">
-								<form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+								<form action="{% url 'add_to_cart' cart_item.product.id %}" method="POST">
 									{% csrf_token %}
-									{% for item in cart_item.variations.all %}
-										<input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
-									{% endfor %}
-									<button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
+
+										<input type="hidden" name="{{ cart_item.variations.first.variation_type | lower }}" value="{{ cart_item.variations.first.id }}">
+
+									<button class="btn btn-light" type="submit" id="button-plus"> <i class="fa fa-plus"></i> </button>
 								</form>
 							</div>
 						</div> <!-- input-group.// -->
@@ -68,12 +73,13 @@
 	</td>
 	<td>
 		<div class="price-wrap">
-			<var class="price">$ {{ cart_item.sub_total }}</var>
-			<small class="text-muted"> $ {{ cart_item.product.price }} each </small>
+			<var class="price">Rs. {{ cart_item.sub_total }}</var>
+			
+			<small class="text-muted"> Rs. {{ item_price }} each </small>
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
-	<a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
+	<a href="{% url 'remove_from_cart' cart_item.product.id cart_item.id %}" onclick="return confirm('Are you sure you want to delete this item?')" class="btn btn-danger"> Remove</a>
 	</td>
 </tr>
 {% endfor %}
@@ -89,15 +95,15 @@
 		<div class="card-body">
 			<dl class="dlist-align">
 			  <dt>Total price:</dt>
-			  <dd class="text-right">$ {{total}}</dd>
+			  <dd class="text-right">Rs. {{total}}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Tax:</dt>
-			  <dd class="text-right"> $ {{tax}}</dd>
+			  <dd class="text-right"> Rs. {{tax}}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Grand Total:</dt>
-			  <dd class="text-right text-dark b"><strong>$ {{grand_total}}</strong></dd>
+			  <dd class="text-right text-dark b"><strong>Rs. {{grand_total}}</strong></dd>
 			</dl>
 			<hr>
 			<p class="text-center mb-3">
