--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -56,7 +56,7 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<a href="{% url 'less_to_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
+							<a href="{% url 'less_to_cart'  cart_item.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
 							</div>
 							<input type="text" class="form-control"  value="{{ cart_item.quantity }}">
 							<div class="input-group-append">
@@ -75,7 +75,7 @@
 		<div class="price-wrap">
 			<var class="price">Rs. {{ cart_item.sub_total }}</var>
 			
-			<small class="text-muted"> Rs. {{ item_price }} each </small>
+			<small class="text-muted"> Rs. {{ cart_item.price | safe }} each </small>
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
