--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -28,7 +28,7 @@
 <div class="row align-items-center">
 	<div class="col-lg-2 col-md-3 col-6">
 		<a href="/" class="brand-wrap">
-			<img class="logo" width="200" height="500" src="{% static 'images/logo.png' %}">
+			<img class="logo" style="max-height: 40px;" src="{% static 'images/logo.png' %}">
 		</a> <!-- brand-wrap.// -->
 	</div>
 	<div class="col-lg col-sm col-md col-6 flex-grow-0">
