--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -1,207 +1,198 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
-
+{% extends 'base.html' %} {% load static %} {% block content %}
 
 <section class="section-content padding-y bg">
-	<div class="container">
+  <div class="container">
+    <!-- ============================ COMPONENT 1 ================================= -->
+    <h4 class="text-center mb-20">Review Your Order and Make Payment</h4>
+    <div class="row">
+      <aside class="col-lg-8">
+		          <article class="card mb-4">
+            <div class="card-body">
+              <h4 class="card-title mb-4">Review cart</h4>
+              <div class="row">
+                {% for cart_item in cart_items %}
+                <div class="col-md-6">
+                  <figure class="itemside mb-4">
+                    <div class="aside">
+                      <img
+                        src="{{ cart_item.product.images.first.image.url }}"
+                        class="border img-sm"
+                      />
+                    </div>
+                    <figcaption class="info">
+                      <p>{{ cart_item.product.title }}</p>
+                      <p class="text-muted small">
+                        {% if cart_item.variations.all %}
+                          {% for variant in cart_item.variations.all %}
+                            {% if variant.variation_type == 'color' %}
+                              {{ variant.variation_type | capfirst }} : {{ variant.color.name | capfirst }} <br />
+                            {% elif variant.variation_type == 'size' %}
+                              {{ variant.variation_type | capfirst }} : {{ variant.size.name | capfirst }} <br />
+                        {% elif variant.variation_type == 'flavor' %} {{ variant.variation_type | capfirst }} : {{ variant.flavor.description | capfirst }} <br />
+                        {% endif %}
+						{% endfor %} {% endif %}
+                        <span class="text-muted"
+                          >{{ cart_item.quantity }}x = Rs.{{ cart_item.sub_total}}
+                        </span>
+                      </p>
+                    </figcaption>
+                  </figure>
+                </div>
+                <!-- col.// -->
+                {% endfor %}
+              </div>
+              <!-- row.// -->
+            </div>
+            <!-- card-body.// -->
+          </article>
+        <div class="card">
+          <h5 class="card-header">Delivery info</h5>
+          <div class="card-body">
+            <p class="card-text mb-0">{{order.full_name}}</p>
+            <p class="card-text mb-0">{{order.full_address}}</p>
+            <p class="card-text mb-0">{{order.city}}, {{order.state}}</p>
+            <p class="card-text mb-0">{{order.country}}</p>
+            <p class="card-text mb-0">{{order.email}}</p>
+            <p class="card-text mb-0">{{order.phone}}</p>
+            {% if order.order_note %}
+            <b>Order Note: </b> {{order.order_note}} {% endif %}
+          </div>
+        </div>
+        <article class="accordion" id="accordion_pay">
+          <div class="card">
+            <header class="card-header">
+              <img
+                src="{% static 'images/misc/payment-card.png' %}"
+                class="float-right"
+                height="24"
+              />
+              <label
+                class="form-check"
+                data-toggle="collapse"
+                data-target="#pay_payme"
+              >
+                <input
+                  class="form-check-input"
+                  name="payment-option"
+                  type="radio"
+                  value="option2"
+                />
+                <h6 class="form-check-label">Credit Card</h6>
+              </label>
+            </header>
+            <div id="pay_payme" class="collapse" data-parent="#accordion_pay">
+              <div class="card-body">
+                <p class="alert alert-success">
+                  Some information or instruction
+                </p>
+                <form class="form-inline">
+                  <input
+                    type="text"
+                    class="form-control mr-2"
+                    placeholder="xxxx-xxxx-xxxx-xxxx"
+                    name=""
+                  />
+                  <input
+                    type="text"
+                    class="form-control mr-2"
+                    style="width: 100px"
+                    placeholder="dd/yy"
+                    name=""
+                  />
+                  <input
+                    type="number"
+                    maxlength="3"
+                    class="form-control mr-2"
+                    style="width: 100px"
+                    placeholder="cvc"
+                    name=""
+                  />
+                  <button class="btn btn btn-success">Pay</button>
+                </form>
+              </div>
+              <!-- card body .// -->
+            </div>
+            <!-- collapse .// -->
+          </div>
+          <!-- card.// -->
 
-		<!-- ============================ COMPONENT 1 ================================= -->
-		<h4 class="text-center mb-20">Review Your Order and Make Payment</h4>
-		<div class="row">
 
-			<aside class="col-lg-8">
-				<div class="card">
-					<h5 class="card-header">Billing Address</h5>
-					<div class="card-body">
-						<p class="card-text mb-0">{{order.full_name}}</p>
-						<p class="card-text mb-0">{{order.full_address}}</p>
-						<p class="card-text mb-0">{{order.city}}, {{order.state}}</p>
-						<p class="card-text mb-0">{{order.country}}</p>
-						<p class="card-text mb-0">{{order.email}}</p>
-						<p class="card-text mb-0">{{order.phone}}</p>
-						{% if order.order_note %}
-						<b>Order Note: </b> {{order.order_note}}
-						{% endif %}
+          <!-- card.// -->
+        </article>
+        
+      </aside>
+      <!-- col.// -->
+      <aside class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <dl class="dlist-align">
+              <dt>Total price:</dt>
+              <dd class="text-right">Rs. {{subtotal}}</dd>
+            </dl>
+            <dl class="dlist-align">
+              <dt>Tax:</dt>
+              <dd class="text-right">Rs. {{tax}}</dd>
+            </dl>
+            <dl class="dlist-align">
+              <dt>Grand Total:</dt>
+              <dd class="text-right text-dark b">
+                <strong>Rs. {{grand_total}}</strong>
+              </dd>
+            </dl>
+            <hr />
+            <p class="text-center mb-3">
+              <img
+                src="{% static './images/misc/payments.png' %}"
+                height="26"
+              />
+            </p>
 
+            <form id="paymentForm" action="{% url 'payments'  %}" method="POST">
+              ` {% csrf_token %}
+              <input
+                type="hidden"
+                name="payment_method"
+                id="payment_method_hidden"
+              />
+              <div id="paypal-button-container">
+                <button type="submit" class="btn btn-primary btn-block">
+                  Pay
+                </button>
+              </div>
+            </form>
+          </div>
+          <!-- card-body.// -->
+        </div>
+        <!-- card.// -->
+         <div id="loader" style="display:none; text-align:center;">
+          <img src="{% static 'images/Spinner.gif' %}" alt="Loading..." style="width:40px;">
+          <p>Processing payment, please wait...</p> 
+          </div>
+      </aside>
+      <!-- col.// -->
+    </div>
+    <!-- row.// -->
 
-					</div>
-				</div>
-				<div class="card">
-					<h5 class="card-header">Payment Method</h5>
-					<div class="card-body">
-						<p class="card-text">PayPal</p>
-
-					</div>
-				</div>
-				<div class="card">
-					<h5 class="card-header">Review Products</h5>
-					<div class="card-body">
-						<table class="table table-borderless table-shopping-cart">
-							<thead class="text-muted">
-								<tr class="small text-uppercase">
-									<th scope="col">Product</th>
-									<th scope="col" width="120">Quantity</th>
-									<th scope="col" width="120">Price</th>
-
-								</tr>
-							</thead>
-							<tbody>
-
-								{% for cart_item in cart_items %}
-								<tr>
-									<td>
-										<figure class="itemside align-items-center">
-											<div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
-											<figcaption class="info">
-												<a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
-												<p class="text-muted small">
-													{% if cart_item.variations.all %}
-													{% for item in cart_item.variations.all %}
-													{{ item.variation_category | capfirst }} : {{ item.variation_value | capfirst }} <br>
-													{% endfor %}
-													{% endif %}
-												</p>
-											</figcaption>
-										</figure>
-									</td>
-									<td>
-										<!-- col.// -->
-										<label for="">{{cart_item.quantity}}</label>
-									</td>
-									<td>
-										<div class="price-wrap">
-											<var class="price">$ {{ cart_item.sub_total }}</var>
-											<small class="text-muted"> $ {{ cart_item.product.price }} each </small>
-										</div> <!-- price-wrap .// -->
-									</td>
-
-								</tr>
-								{% endfor %}
-
-							</tbody>
-						</table>
-
-					</div>
-				</div>
-
-			</aside> <!-- col.// -->
-			<aside class="col-lg-4">
-
-				<div class="card">
-					<div class="card-body">
-						<dl class="dlist-align">
-							<dt>Total price:</dt>
-							<dd class="text-right">$ {{total}}</dd>
-						</dl>
-						<dl class="dlist-align">
-							<dt>Tax:</dt>
-							<dd class="text-right"> $ {{tax}}</dd>
-						</dl>
-						<dl class="dlist-align">
-							<dt>Grand Total:</dt>
-							<dd class="text-right text-dark b"><strong>$ {{grand_total}}</strong></dd>
-						</dl>
-						<hr>
-						<p class="text-center mb-3">
-							<img src="{% static './images/misc/payments.png' %}" height="26">
-						</p>
-
-
-						<div id="paypal-button-container">
-							<!-- PayPal Button Will Load -->
-						</div>
-
-					</div> <!-- card-body.// -->
-				</div> <!-- card.// -->
-
-			</aside> <!-- col.// -->
-
-
-		</div> <!-- row.// -->
-
-		<!-- ============================ COMPONENT 1 END .// ================================= -->
-
-	</div> <!-- container .//  -->
+    <!-- ============================ COMPONENT 1 END .// ================================= -->
+  </div>
+  <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
+
+
 <script>
+  document.querySelector(".btn-block").addEventListener("click", function (e) {
+    var selectedMethod = document.getElementById("payment_method").value;
+    document.getElementById("payment_method_hidden").value = selectedMethod;
+  });
 
-	function getCookie(name) {
-    let cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        const cookies = document.cookie.split(';');
-        for (let i = 0; i < cookies.length; i++) {
-            const cookie = cookies[i].trim();
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
-
-	var amount = "{{ grand_total }}"
-	var url = "{% url 'payments' %}"
-	var csrftoken = getCookie('csrftoken');
-	var orderID = "{{order.order_number}}"
-	var payment_method = 'PayPal'
-	var redirect_url = "{% url 'order_complete' %}"
-	// Render the PayPal button into #paypal-button-container
-	paypal.Buttons({
-
-		style: {
-			color: 'blue',
-			shape: 'rect',
-			label: 'pay',
-			height: 40
-		},
-
-		// Set up the transaction
-		createOrder: function(data, actions) {
-			return actions.order.create({
-				purchase_units: [{
-					amount: {
-						value: amount,
-					}
-				}]
-			});
-		},
-
-		// Finalize the transaction
-		onApprove: function(data, actions) {
-			return actions.order.capture().then(function(details) {
-				// Show a success message to the buyer
-				console.log(details);
-				sendData();
-				function sendData(){
-					fetch(url, {
-						method : "POST",
-						headers: {
-							"Content-type": "application/json",
-							"X-CSRFToken": csrftoken,
-						},
-						body: JSON.stringify({
-							orderID: orderID,
-							transID: details.id,
-							payment_method: payment_method,
-							status: details.status,
-						}),
-					})
-				  .then((response) => response.json())
-				  .then((data) => {
-						window.location.href = redirect_url + '?order_number='+data.order_number+'&payment_id='+data.transID;
-					});
-				}
-			});
-		}
-
-
-	}).render('#paypal-button-container');
+    document.getElementById("paymentForm").addEventListener("submit", function (e) {
+    // Show loader
+    document.getElementById("loader").style.display = "block";
+    // Disable Pay button
+    document.querySelector(".btn-block").disabled = true;
+  });
 </script>
 
 {% endblock %}
