--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -12,7 +12,7 @@
 				<aside class="col-md-6">
 					<article class="gallery-wrap">
 						<div class="img-big-wrap mainImage">
-							<center><img src="{{ single_product_images.first.image.url }}"></center>
+							<center><img src="{{ single_product.image_tag }}"></center>
 						</div> <!-- img-big-wrap.// -->
 
 					</article> <!-- gallery-wrap .end// -->
@@ -33,14 +33,14 @@
 
 							<h2 class="title">{{ single_product.title }}</h2>
 							<div class="rating-star">
-							
-									{% if single_product.rating %}
+
+									{% if single_product.average_rating %}
 								<span>
-									<i class="fa fa-star{% if single_product.rating < 0.5 %}-o{% elif single_product.rating >= 0.5 and single_product.rating < 1 %}-half-o {% endif %}" aria-hidden="true"></i>
-									<i class="fa fa-star{% if single_product.rating < 1.5 %}-o{% elif single_product.rating >= 1.5 and single_product.rating < 2 %}-half-o {% endif %}" aria-hidden="true"></i>
-									<i class="fa fa-star{% if single_product.rating < 2.5 %}-o{% elif single_product.rating >= 2.5 and single_product.rating < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
-									<i class="fa fa-star{% if single_product.rating < 3.5 %}-o{% elif single_product.rating >= 3.5 and single_product.rating < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
-									<i class="fa fa-star{% if single_product.rating < 4.5 %}-o{% elif single_product.rating >= 4.5 and single_product.rating < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
+									<i class="fa fa-star{% if single_product.average_rating < 0.5 %}-o{% elif single_product.average_rating >= 0.5 and single_product.average_rating < 1 %}-half-o {% endif %}" aria-hidden="true"></i>
+									<i class="fa fa-star{% if single_product.average_rating < 1.5 %}-o{% elif single_product.average_rating >= 1.5 and single_product.average_rating < 2 %}-half-o {% endif %}" aria-hidden="true"></i>
+									<i class="fa fa-star{% if single_product.average_rating < 2.5 %}-o{% elif single_product.average_rating >= 2.5 and single_product.average_rating < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
+									<i class="fa fa-star{% if single_product.average_rating < 3.5 %}-o{% elif single_product.average_rating >= 3.5 and single_product.average_rating < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
+									<i class="fa fa-star{% if single_product.average_rating < 4.5 %}-o{% elif single_product.average_rating >= 4.5 and single_product.average_rating < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
 					<!-- <span>{{single_product.countReview}} reviews</span> -->
 									</span>
 									{% endif %}
@@ -49,7 +49,7 @@
 
 
 							<div class="mb-3">
-								<var class="price h4">$ {{single_product.price}}</var>
+								<var class="price h4">Rs. {{single_product.price}}</var>
 							</div>
 								<div class="blog-content">
 								{{ single_product.description | safe }}
@@ -169,7 +169,7 @@
 			<i class="fa fa-star{% if single_product.averageReview < 2.5 %}-o{% elif single_product.averageReview >= 2.5 and single_product.averageReview < 3 %}-half-o {% endif %}" aria-hidden="true"></i>
 			<i class="fa fa-star{% if single_product.averageReview < 3.5 %}-o{% elif single_product.averageReview >= 3.5 and single_product.averageReview < 4 %}-half-o {% endif %}" aria-hidden="true"></i>
 			<i class="fa fa-star{% if single_product.averageReview < 4.5 %}-o{% elif single_product.averageReview >= 4.5 and single_product.averageReview < 5 %}-half-o {% endif %}" aria-hidden="true"></i>
-	<span>{{single_product.countReview}} reviews</span>
+	<span>{{count_reviews}} reviews</span>
 			</span>
 	</div>
 
@@ -200,7 +200,7 @@
 						</p>
 					</div>
 				</article>
-{% endfor %}
+
 
 
 			</div> <!-- col.// -->
