--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 
@@ -22,15 +22,19 @@
 				<div class="card" style="text-align:center;">
 					<div class="card-body">
 						<h5 class="card-title">Total Orders</h5>
-						<h4>{{orders_count}}</h4>
-						<a href="{% url 'my_orders' %}">View Orders</a>
+						<h4>{{order_count}}</h4>
+						<a href="{% url 'myOrders' %}">View Orders</a>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-6">
 				<div class="card" style="text-align:center;">
 					<div class="card-body">
-						<img src="{{userprofile.profile_picture.url}}" alt="User Profile Picture" width="50" height="50" style="border-radius:50%;">
+						{% if user.userprofile.profile_picture %}
+						<img src="{{user.userprofile.profile_picture.url}}" alt="User Profile Picture" width="100"  style="border-radius:50%;">
+						{% else %}
+						<img src="{% static 'images/default_profile_picture.jpg' %}" alt="Default Profile Picture" width="50" height="50" style="border-radius:50%;">
+						{% endif %}
 						<p class="mb-0">{{user.email}}</p>
 						<p>{{user.phone_number}}</p>
 					</div>
