--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 
 {% block content %}
 
@@ -17,11 +17,15 @@
 		</header>
 		<div class="card-body">
 			<div class="text-right">
-				<img src="{{userprofile.profile_picture.url}}" alt="Profile Picture" width="100" style="border-radius:50px;">
+				{% if profile.profile_picture %}
+				    <img src="{{ profile.profile_picture.url }}" alt="Profile Picture" width="100" style="border-radius:50px;">
+				{% else %}
+				    <img src="{% static 'images/default_profile_picture.jpg' %}" alt="No Profile Picture" width="100" style="border-radius:50px;">
+				{% endif %}
 			</div>
 			<div class="row">
 			<div class="col-md-12">
-				<form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
+				<form action="{% url 'editProfile' %}" method="POST" enctype="multipart/form-data">
 					{% csrf_token %}
 					<div class="form-row">
 						<div class="form-group col-md-6">
@@ -57,8 +61,8 @@
 							{{profile_form.city}}
 						</div>
 						<div class="form-group col-md-4">
-							<label>State</label>
-							{{profile_form.state}}
+							<label>Province</label>
+							{{profile_form.province}}
 						</div>
 						<div class="form-group col-md-4">
 							<label>Country</label>
