--- a/templates/base.html
+++ b/templates/base.html
@@ -30,21 +30,8 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
-<script type="{% static 'text/javascript' %}">
-	// This is a placeholder for any custom JavaScript code you might want to add
-	// For example, you can initialize plugins or set up event listeners here
-	// $(document).ready(function() {
-	//     // Your code here
-	// });">
-/// some script
-
-// jquery ready start
-$(document).ready(function() {
-	// jQuery code
-
-}); 
-// jquery end
-</script>
+<link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
 <body>
